force-app/main/default/objects/Contact/fields/Adi_demo_day_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Adi_demo_day_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Adi demo day Checkbox</label>
    <type>Checkbox</type>
</CustomField>