force-app/main/default/objects/Contact/fields/Demo_Checkbox__c.field-meta.xml
<CustomField>
    <fullName>Demo_Checkbox__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Demo Checkbox</label>
    <type>Checkbox</type>
</CustomField>