force-app/main/default/objects/Contact/fields/external_id1__c.field-meta.xml
<CustomField>
    <fullName>external_id1__c</fullName>
    <description>used for datapacks</description>
    <encryptionScheme>None</encryptionScheme>
    <label>external id1</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>